# ModernBERT

./: .gitignore  README.md  checkpoint_eval_monitor.py  create_random_init_model.py  environment.yaml  find_sparsity.ipynb  generate_eval_config.py  main.py  pyproject.toml  run_evals.py
efficiency/notebooks/base/bert/: bert_base_fail_1098.ipynb  bert_base_runtime.ipynb  bert_base_success_1096.ipynb
efficiency/notebooks/base/debertav3/: debertav3_base_runtime.ipynb  debertav3_fail_238.ipynb  debertav3_success_236.ipynb
efficiency/notebooks/base/gte/: gte_base_fail_640.ipynb  gte_base_fail_longcontext.ipynb  gte_base_runtime.ipynb  gte_base_runtime_noxformers.ipynb  gte_base_success_638.ipynb  gte_base_success_longcontext.ipynb  runtime.txt
efficiency/notebooks/base/modernbert/: modernbert_base_fail_1606.ipynb  modernbert_base_fail_longcontext.ipynb  modernbert_base_runtime.ipynb  modernbert_base_success_1604.ipynb  modernbert_base_success_1604_longcontext.ipynb  runtime.txt
efficiency/notebooks/base/nomic/: nomic_base_runtime.ipynb  nomic_fail_590.ipynb  nomic_fail_longcontext.ipynb  nomic_success_588.ipynb  runtime.txt  (+1 more)
src/: flex_bert.py  scheduler.py  sequence_packer.py  text_data.py
src/bert_layers/: attention.py  configuration_bert.py  embeddings.py  layers.py  loss.py  model.py  normalization.py  padding.py  rotary.py  softpick.py
src/bert_layers/triton/: rotary.py
testing_chamber/: test.ipynb
tests/: test_cross_entropy.py  test_fa2_fa3.py  test_rotary.py  test_sdpa_fa.py
yamls/main/: flex-bert-rope-parallel-firstprenorm-softpick.yaml
(+29 files in other folders)
